# paracell

./: Cargo.toml  README.md
.github/workflows/: ci.yml
codegen_circt/: Cargo.toml
codegen_llvm/: Cargo.toml
codegen_verilog/: Cargo.toml
parser_lalrpop/: Cargo.toml
parser_lalrpop/src/: lib.rs
parser_lalrpop/src/flow/: ast.rs  grammar.lalrpop  mod.rs  sem.rs
parser_lalrpop/src/sexpr/: ast.rs  grammar.lalrpop  mod.rs
parser_lalrpop/tests/: flow.rs  sexpr.rs
parser_sem/: Cargo.toml
parser_sem/src/: lib.rs  sem.rs
represent/: Cargo.toml
represent/src/: lib.rs  sym.rs
util_macro/: Cargo.toml
util_macro/src/: lib.rs
util_struct/: Cargo.toml
util_struct/src/: lib.rs  map.rs
